RESOLVED FIXED173485
DRT fails to reset page visibility between tests
https://bugs.webkit.org/show_bug.cgi?id=173485
Summary DRT fails to reset page visibility between tests
Chris Dumez
Reported 2017-06-16 11:31:13 PDT
DRT fails to reset page visibility between tests and relies on tests calling testRunner.resetPageVisibility(). Fix this to address flakiness.
Attachments
Patch (1.86 KB, patch)
2017-06-16 11:36 PDT, Chris Dumez
ap: review+
simon.fraser: commit-queue-
Chris Dumez
Comment 1 2017-06-16 11:36:36 PDT
Simon Fraser (smfr)
Comment 2 2017-06-16 13:07:49 PDT
Comment on attachment 313098 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=313098&action=review > Tools/DumpRenderTree/mac/DumpRenderTree.mm:1830 > + if (gTestRunner) > + gTestRunner->resetPageVisibility(); > + > if (gTestRunner) { Can't you just have the if (gTestRunner) once?
Chris Dumez
Comment 3 2017-06-16 13:09:28 PDT
Note You need to log in before you can comment on or make changes to this bug.