DRT fails to reset page visibility between tests https://bugs.webkit.org/show_bug.cgi?id=173485

Reviewed by Alexey Proskuryakov.

DRT fails to reset page visibility between tests and relies on tests calling testRunner.resetPageVisibility().
Fix this to address flakiness.

I confirmed this by commenting out the call to testRunner.resetPageVisibility() in
fast/events/page-visibility-onvisibilitychange.html and running the test in a loop.
The test became flaky without the DRT change and was no longer flaky with the DRT
change.

WebKitTestRunner already does this.

* DumpRenderTree/mac/DumpRenderTree.mm:
(resetWebViewToConsistentStateBeforeTesting):

Canonical link: https://commits.webkit.org/190357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218406 268f45cc-cd09-0410-ab3c-d52691b4dbfc